# ic-http-lambda

./: .gitignore  Cargo.toml  README.md  deploy.sh
src/: main.rs
