[package]
name = "ic-http-lambda"
version = "0.1.0"
authors = ["Joachim Breitner <mail@joachim-breitner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
tokio = {version = "^0.2", features = ["full"]}
simple-server = "0.4"
http = "^0.1"
ic-agent = "^0.1"
ic-types = "^0.1"
candid = "^0.6.11"
serde = "^1.0"
futures = "0.3"
delay = "0.3.0"

[patch.crates-io]
ic-agent = { path = "../agent-rs/ic-agent" }
ic-types = { path = "../agent-rs/ic-types" }

[features]
with-lambda = []
